# wang-os

./: Cargo.toml
.cargo/: config
docs/: 01 初始化项目.md  02 自定义编译目标(最小化内核).md  03 VGA 字符模式.md  04 内核测试.md  05 CPU异常处理.md  06 硬件中断.md  07 内存分页
os/: Cargo.toml
os/src/: interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
os/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
